--- a/topografiya/templates/leader/pdo_works.html
+++ b/topografiya/templates/leader/pdo_works.html
@@ -46,7 +46,7 @@
 {#                                        <div><b>Шартнома тузилган сана:</b> {{ pdowork.agreement_date }}</div>#}
 {#                                        <div><b>Жойлашган жойи:</b> {{ pdowork.object_address }}</div>#}
                                         <div><b>Наименование заказчика:</b> {{ pdowork.customer }}</div>
-                                        <div><b>ата заключения договора  :</b> {{ pdowork.agreement_date }}</div>
+                                        <div><b>Дата заключения договора  :</b> {{ pdowork.agreement_date }}</div>
                                         <div><b>Местоположение:</b> {{ pdowork.object_address }}</div>
 
                                         <div class="text-center p-2">
