--- a/topografiya/templates/geodezis/program_works_geodesiz.html
+++ b/topografiya/templates/geodezis/program_works_geodesiz.html
@@ -13,10 +13,10 @@
                 <div class="page-header">
                     <div class="row">
                         <div class="col-sm-6">
-                            <h3>Топографик-геодезик дастури</h3>
+                            <h3>Программа работ</h3>
                             <ol class="breadcrumb">
-                                <li class="breadcrumb-item"><a href="{% url 'index' %}">Бош саҳифа</a></li>
-                                <li class="breadcrumb-item active"><a href="{% url 'program_works_geodezis' %}">Топографик-геодезик дастури текшируви</a> </li>
+                                <li class="breadcrumb-item"><a href="{% url 'index' %}">Главная</a></li>
+                                <li class="breadcrumb-item active"><a href="{% url 'program_works_geodezis' %}">Проверка Программа работ</a> </li>
                             </ol>
                         </div>
                     </div>
@@ -26,10 +26,10 @@
                         <div class="card">
                             <div class="card-body">
                                 <ul class="nav nav-tabs" id="icon-tab" role="tablist">
-                                    <li class="nav-item"><a class="nav-link active" data-bs-toggle="tab" href="#new-ones" role="tab" aria-selected="false">Янги текширувга келган ишлар {% if new_ones.count > 0 %}<span class="badge badge-danger rounded-pill">{{ new_ones.count }}</span>{% endif %}</a></li>
-                                    <li class="nav-item"><a class="nav-link" data-bs-toggle="tab" href="#rejected-ones" role="tab" aria-controls="contact-icon" aria-selected="true">Қайтарилганлар {% if rejected_ones.count > 0 %}<span class="badge badge-danger rounded-pill">{{ rejected_ones.count }}</span>{% endif %}</a></li>
-                                    <li class="nav-item"><a class="nav-link" data-bs-toggle="tab" href="#less-time-ones" role="tab" aria-controls="camera-icon" aria-selected="true"> Муддати кам қолганлар {% if less_time_ones.count > 0 %}<span class="badge badge-warning rounded-pill">{{ less_time_ones.count }}</span>{% endif %} </a></li>
-                                    <li class="nav-item"><a class="nav-link" data-bs-toggle="tab" href="#aggreed-ones" role="tab" aria-controls="grow-icon" aria-selected="true"> Тасдикланганлар {% if aggreed_ones.count > 0 %}<span class="badge badge-success rounded-pill">{{ aggreed_ones.count }}</span>{% endif %}</a></li>
+                                    <li class="nav-item"><a class="nav-link active" data-bs-toggle="tab" href="#new-ones" role="tab" aria-selected="false">Новые поступления работ {% if new_ones.count > 0 %}<span class="badge badge-danger rounded-pill">{{ new_ones.count }}</span>{% endif %}</a></li>
+                                    <li class="nav-item"><a class="nav-link" data-bs-toggle="tab" href="#rejected-ones" role="tab" aria-controls="contact-icon" aria-selected="true">Возвращенные {% if rejected_ones.count > 0 %}<span class="badge badge-danger rounded-pill">{{ rejected_ones.count }}</span>{% endif %}</a></li>
+                                    <li class="nav-item"><a class="nav-link" data-bs-toggle="tab" href="#less-time-ones" role="tab" aria-controls="camera-icon" aria-selected="true"> Краткосрочная работа {% if less_time_ones.count > 0 %}<span class="badge badge-warning rounded-pill">{{ less_time_ones.count }}</span>{% endif %} </a></li>
+                                    <li class="nav-item"><a class="nav-link" data-bs-toggle="tab" href="#aggreed-ones" role="tab" aria-controls="grow-icon" aria-selected="true"> Утвержденные {% if aggreed_ones.count > 0 %}<span class="badge badge-success rounded-pill">{{ aggreed_ones.count }}</span>{% endif %}</a></li>
                                 </ul>
 
 
@@ -38,7 +38,7 @@
                                          <div class="tab-pane fade active show" id="new-ones" role="tabpanel">
                                             <div class="row">
                                                     {% if new_ones.count == 0 %}
-                                                        <p class="mb-0 m-t-30">Келиб тушган иш йўқ</p>
+                                                        <p class="mb-0 m-t-30">Нет входящей работы</p>
                                                     {% endif %}
 
                                                      {% for object in new_ones %}
@@ -49,15 +49,15 @@
 
                                                                         <div class="blog-date"><span style="color: #168eea;font-size: 40px;">{{ object.object.pdowork.work_term }}</span> Kun</div>
                                                                         <div class="blog-bottom-content">
-                                                                            <div><b>Буюртмачи номи:</b> {{ object.object.pdowork.customer }}</div>
-                                                                            <div><b>Шартнома тузилган сана:</b> {{ object.object.pdowork.agreement_date }}</div>
-                                                                            <div><b>Жойлашган жойи:</b> {{ object.object.pdowork.object_address }}</div>
+                                                                            <div><b>Наименование заказчика:</b> {{ object.object.pdowork.customer }}</div>
+                                                                            <div><b>Дата заключения договора  :</b> {{ object.object.pdowork.agreement_date }}</div>
+                                                                            <div><b>Местоположение:</b> {{ object.object.pdowork.object_address }}</div>
                                                                         </div>
                                                                         <hr>
                                                                         <div class="detail-footer">
                                                                             <a href="{% url 'program_work_event' id=object.object.id %}">
                                                                                 <button class="btn btn-square btn-primary w-100">
-                                                                                    Батафсил
+                                                                                   Подробная информация
                                                                                 </button>
                                                                             </a>
                                                                         </div>
@@ -74,7 +74,7 @@
                                     <div class="tab-pane fade" id="rejected-ones" role="tabpanel" aria-labelledby="contact-icon-tab">
                                         <div class="row">
                                         {% if rejected_ones.count == 0 %}
-                                             <p class="mb-0 m-t-30">Қайтарилган иш йўқ</p>
+                                             <p class="mb-0 m-t-30">Возвращенные работы отсутствуют</p>
                                         {% endif %}
 
                                         {% for object in rejected_ones %}
@@ -86,10 +86,10 @@
 
                                                         <div class="blog-date"><span style="color: #168eea;font-size: 40px;">{{ object.object.pdowork.work_term }}</span> Kun</div>
                                                         <div class="blog-bottom-content">
-                                                           <div><b>Буюртмачи номи:</b> {{ object.object.pdowork.customer }}</div>
-                                                            <div><b>Шартнома тузилган сана:</b> {{ object.object.pdowork.agreement_date }}</div>
-                                                            <div><b>Жойлашган жойи:</b> {{ object.object.pdowork.object_address }}</div>
-                                                             <div class="text-end text-danger"><b>Қайтарилганлар сони:</b>
+                                                           <div><b>Наименование заказчика:</b> {{ object.object.pdowork.customer }}</div>
+                                                                            <div><b>Дата заключения договора  :</b> {{ object.object.pdowork.agreement_date }}</div>
+                                                                            <div><b>Местоположение:</b> {{ object.object.pdowork.object_address }}</div>
+                                                             <div class="text-end text-danger"><b>Количество возвращенных:</b>
                                                                 <span style="color: #168eea;font-size:30px;">
                 <b  class="count" data-all="{% for work in rejecteds %}{% if work.programowork.object.id == object.object.id %} {{ work.programowork.object.id }},{% endif %}{% endfor %}"></b>
 
@@ -102,7 +102,7 @@
                                                          <div class="detail-footer">
                                                              <a href="{% url 'program_work_form_edit' id=object.object.id %}">
                                                                  <button class="btn btn-square btn-primary w-100">
-                                                                     Батафсил
+                                                                     Подробная информация
                                                                  </button>
                                                              </a>
                                                          </div>
@@ -134,17 +134,17 @@
                                                     <div class="pricing-plan shadow border-0">
                                                         <div class="ribbon ribbon-primary ribbon-vertical-right">1</div>
                                                         <div class="blog-date"><span style="color: #168eea;font-size: 40px;">30</span> Январ 2022</div>
-                                                        <h5>Обйект ҳақида маълумот</h5>
+                                                        <h5>Информация об объекте</h5>
                                                         <div class="blog-bottom-content">
-                                                            <div><b>Буюртмачи номи:</b> {{ object.object.pdowork.customer }}</div>
-                                                            <div><b>Шартнома тузилган сана:</b> {{ object.object.pdowork.agreement_date }}</div>
-                                                            <div><b>Жойлашган жойи:</b> {{ object.object.pdowork.object_address }}</div>
+                                                            <div><b>Наименование заказчика:</b> {{ object.object.pdowork.customer }}</div>
+                                                            <div><b>Дата заключения договора  :</b> {{ object.object.pdowork.agreement_date }}</div>
+                                                            <div><b>Местоположение:</b> {{ object.object.pdowork.object_address }}</div>
                                                         </div>
                                                         <hr>
                                                         <div class="detail-footer">
-                                                            <a href="../starter-kit/">
+                                                            <a href="#">
                                                                 <button class="btn btn-square btn-outline-primary-2x">
-                                                                    Батафсил маълумот
+                                                                    Подробная информация
                                                                 </button>
                                                             </a>
                                                         </div>
@@ -163,7 +163,7 @@
                                         <div class="row">
 
                                             {% if aggreed_ones.count == 0 %}
-                                                 <p class="mb-0 m-t-30">Тасдикланган иш йўқ</p>
+                                                 <p class="mb-0 m-t-30">Утвержденные работы отсутствуют</p>
                                             {% endif %}
 
                                             {% for object in aggreed_ones %}
@@ -175,15 +175,15 @@
                                                                         <div class="blog-date"><span style="color: #168eea;font-size: 40px;">{{ object.object.pdowork.work_term }}</span> Kun</div>
                                                                         <h5>{{ object.pdowork.object_name}}</h5>
                                                                         <div class="blog-bottom-content">
-                                                                            <div><b>Буюртмачи номи:</b> {{ object.object.pdowork.customer }}</div>
-                                                            <div><b>Шартнома тузилган сана:</b> {{ object.object.pdowork.agreement_date }}</div>
-                                                            <div><b>Жойлашган жойи:</b> {{ object.object.pdowork.object_address }}</div>
+                                                                            <div><b>Наименование заказчика:</b> {{ object.object.pdowork.customer }}</div>
+                                                                            <div><b>Дата заключения договора  :</b> {{ object.object.pdowork.agreement_date }}</div>
+                                                                            <div><b>Местоположение:</b> {{ object.object.pdowork.object_address }}</div>
                                                                         </div>
                                                                         <hr>
                                                                         <div class="detail-footer">
                                                                             <a href="{% url 'program_work_form_edit' id=object.object.id %}">
                                                                                 <button class="btn btn-square btn-primary w-100">
-                                                                                    Батафсил
+                                                                                    Подробная информация
                                                                                 </button>
                                                                             </a>
                                                                         </div>
