--- a/topografiya/templates/geodezis/report/reports.html
+++ b/topografiya/templates/geodezis/report/reports.html
@@ -1,7 +1,7 @@
 {% extends 'master.html' %}
 
 {% load static %}
-{% block title %} Бош геодезис назоратига келган ишлар {% endblock %}
+{% block title %} Очеты поступившие на проверку {% endblock %}
 
 {% block content%}
 
@@ -16,8 +16,8 @@
                         <div class="col-sm-6">
                             <h3>Ҳисоботлар</h3>
                             <ol class="breadcrumb">
-                                <li class="breadcrumb-item"><a href="{% url 'index' %}">Бош саҳифа</a></li>
-                                <li class="breadcrumb-item active"><a href="{% url 'geodezis_reports' %}">Ҳисоботлар</a></li>
+                                <li class="breadcrumb-item"><a href="{% url 'index' %}">Главная</a></li>
+                                <li class="breadcrumb-item active"><a href="{% url 'geodezis_reports' %}">Очеты поступившие на проверку</a></li>
                             </ol>
                         </div>
                     </div>
@@ -27,10 +27,10 @@
                         <div class="card">
                             <div class="card-body">
                                 <ul class="nav nav-tabs" id="icon-tab" role="tablist">
-                                    <li class="nav-item"><a class="nav-link active show" data-bs-toggle="tab" href="#checking-ones" role="tab" aria-controls="profile-icon" aria-selected="false"> Текширувга келган ҳисоботлар {% if checking_ones.count > 0 %}<span class="badge badge-warning rounded-pill">{{ checking_ones.count }}</span>{% endif %}</a></li>
-                                    <li class="nav-item"><a class="nav-link" data-bs-toggle="tab" href="#rejected-ones" role="tab" aria-controls="contact-icon" aria-selected="true">Текширувдан қайтарилган ҳисоботлар {% if rejected_ones.count > 0 %}<span class="badge badge-danger rounded-pill">{{ rejected_ones.count }}</span>{% endif %}</a></li>
-                                    <li class="nav-item"><a class="nav-link" data-bs-toggle="tab" href="#less-time-ones" role="tab" aria-controls="camera-icon" aria-selected="true"> Муддати кам қолганлар {% if less_time_ones.count > 0 %}<span class="badge badge-warning rounded-pill">{{ less_time_ones.count }}</span>{% endif %} </a></li>
-                                    <li class="nav-item"><a class="nav-link" data-bs-toggle="tab" href="#aggreed-ones" role="tab" aria-controls="grow-icon" aria-selected="true"> Якунланганлар {% if aggreed_ones.count > 0 %}<span class="badge badge-success rounded-pill">{{ aggreed_ones.count }}</span>{% endif %}</a></li>
+                                    <li class="nav-item"><a class="nav-link active show" data-bs-toggle="tab" href="#checking-ones" role="tab" aria-controls="profile-icon" aria-selected="false"> Очеты поступившие на проверку {% if checking_ones.count > 0 %}<span class="badge badge-warning rounded-pill">{{ checking_ones.count }}</span>{% endif %}</a></li>
+                                    <li class="nav-item"><a class="nav-link" data-bs-toggle="tab" href="#rejected-ones" role="tab" aria-controls="contact-icon" aria-selected="true">Отчеты, возвращенные после проверки {% if rejected_ones.count > 0 %}<span class="badge badge-danger rounded-pill">{{ rejected_ones.count }}</span>{% endif %}</a></li>
+                                    <li class="nav-item"><a class="nav-link" data-bs-toggle="tab" href="#less-time-ones" role="tab" aria-controls="camera-icon" aria-selected="true"> Краткосрочная работа {% if less_time_ones.count > 0 %}<span class="badge badge-warning rounded-pill">{{ less_time_ones.count }}</span>{% endif %} </a></li>
+                                    <li class="nav-item"><a class="nav-link" data-bs-toggle="tab" href="#aggreed-ones" role="tab" aria-controls="grow-icon" aria-selected="true"> Завершенные {% if aggreed_ones.count > 0 %}<span class="badge badge-success rounded-pill">{{ aggreed_ones.count }}</span>{% endif %}</a></li>
                                 </ul>
 
 
@@ -39,7 +39,7 @@
                                     <div class="tab-pane fade active show" id="checking-ones" role="tabpanel" aria-labelledby="profile-icon-tab">
                                         <div class="row">
                                             {% if checking_ones.count == 0 %}
-                                             <p class="mb-0 m-t-30">Текширувга келган ҳисобот йўқ</p>
+                                             <p class="mb-0 m-t-30"> Нет отчеты поступившие на проверку</p>
                                             {% endif %}
 
                                              {% for object in checking_ones %}
@@ -47,18 +47,18 @@
                                                                 <div class="file-sidebar ribbon-vertical-right-wrapper">
                                                                     <div class="pricing-plan shadow border-0">
                                                                         <div class="ribbon ribbon-right ribbon-primary">ID : {{ object.object.id }}</div>
-                                                                        <div class="blog-date"><span style="color: #168eea;font-size: 40px;">{{ object.object.pdowork.work_term }}</span> Kun</div>
+                                                                        <div class="blog-date"><span style="color: #168eea;font-size: 40px;">{{ object.object.pdowork.work_term }}</span> день</div>
                                                                         <h5>{{ object.object.pdowork.object_name}}</h5>
                                                                         <div class="blog-bottom-content">
-                                                                            <div><b>Келиб тушган вақти:</b> {{ object.object.pdowork.agreement_date}}</div>
-                                                                            <div><b>Муддати</b> {{ object.object.pdowork.work_term}}</div>
-                                                                            <div><b>Жойлашган жойи:</b> {{ object.object.pdowork.object_address}}</div>
+                                                                            <div><b>Заказчик:</b> {{ object.object.pdowork.customer }}</div>
+                                                                        <div><b>Дата заключения договора:</b> {{ object.object.pdowork.agreement_date }}</div>
+                                                                        <div><b>Адрес объекта:</b> {{ object.object.pdowork.object_address }}</div>
                                                                         </div>
                                                                         <hr>
                                                                         <div class="detail-footer">
                                                                             <a href="{% url 'geodezis_report_checking' id=object.object.id %}">
                                                                                 <button class="btn btn-square btn-outline-primary-2x float-end">
-                                                                                    Батафсил маълумот
+                                                                                    Подробная информация
                                                                                 </button>
                                                                             </a>
                                                                         </div>
@@ -75,7 +75,7 @@
                                     <div class="tab-pane fade" id="rejected-ones" role="tabpanel" aria-labelledby="contact-icon-tab">
                                         <div class="row">
                                         {% if rejected_ones.count == 0 %}
-                                             <p class="mb-0 m-t-30">Қайтарилган ҳисобот йўқ</p>
+                                             <p class="mb-0 m-t-30">Нет возвращенного отчета</p>
                                         {% endif %}
 
                                         {% for object in rejected_ones %}
@@ -83,13 +83,13 @@
                                                 <div class="file-sidebar ribbon-vertical-right-wrapper">
                                                     <div class="pricing-plan shadow border-0">
                                                         <div class="ribbon ribbon-right ribbon-primary">ID : {{ object.object.id }}</div>
-                                                        <div class="blog-date"><span style="color: #168eea;font-size: 40px;">{{ object.object.pdowork.work_term }}</span> Kun</div>
+                                                        <div class="blog-date"><span style="color: #168eea;font-size: 40px;">{{ object.object.pdowork.work_term }}</span> день</div>
                                                         <h5>{{ object.object.pdowork.object_name}}</h5>
                                                         <div class="blog-bottom-content">
-                                                            <div><b>Келиб тушган вақти:</b> {{ object.object.pdowork.agreement_date}}</div>
-                                                            <div><b>Муддати</b> {{ object.object.pdowork.work_term}}</div>
-                                                            <div><b>Жойлашган жойи:</b> {{ object.object.pdowork.object_address}}</div>
-                                                            <div class="text-end text-danger"><b>Қайтарилганлар сони:</b>
+                                                           <div><b>Заказчик:</b> {{ object.object.pdowork.customer }}</div>
+                                                                        <div><b>Дата заключения договора:</b> {{ object.object.pdowork.agreement_date }}</div>
+                                                                        <div><b>Адрес объекта:</b> {{ object.object.pdowork.object_address }}</div>
+                                                            <div class="text-end text-danger"><b>Количество отказов:</b>
                                                                 <span style="color: #168eea;font-size:30px;">
 
                 <b  class="count" data-all="{% for work in rejecteds %}{% if work.object == object.object %} {{ work.object.id }},{% endif %}{% endfor %}"></b>
@@ -101,7 +101,7 @@
                                                         <div class="detail-footer">
                                                             <a href="{% url 'show_report_geodezis' id=object.object.id %}">
                                                                 <button class="btn btn-square btn-primary float-end" style="width: 100%">
-                                                                    Батафсил маълумот
+                                                                    Подробная информация
                                                                 </button>
                                                             </a>
                                                         </div>
@@ -121,7 +121,7 @@
                                         <div class="row">
 
                                          {% if less_time_ones.count == 0 %}
-                                             <p class="mb-0 m-t-30">Муддати кам қолган ҳисобот йўқ</p>
+                                             <p class="mb-0 m-t-30">Нет просроченного отчета</p>
                                         {% endif %}
 
                                         {% for object in less_time_ones %}
@@ -130,18 +130,18 @@
                                                 <div class="file-sidebar ribbon-vertical-right-wrapper">
                                                     <div class="pricing-plan shadow border-0">
                                                         <div class="ribbon ribbon-primary ribbon-vertical-right">1</div>
-                                                        <div class="blog-date"><span style="color: #168eea;font-size: 40px;">30</span> Январ 2022</div>
-                                                        <h5>Обйект ҳақида маълумот</h5>
+{#                                                        <div class="blog-date"><span style="color: #168eea;font-size: 40px;">30</span> Январ 2022</div>#}
+{#                                                        <h5>Обйект ҳақида маълумот</h5>#}
                                                         <div class="blog-bottom-content">
-                                                            <div><b>Келиб тушган вақти:</b> 10/01/2022</div>
-                                                            <div><b>Муддати</b> 10/01/2022</div>
-                                                            <div><b>Жойлашган жойи:</b> Тошкент, Янги ҳаёт туман,</div>
+                                                            <div><b>Заказчик:</b> {{ object.object.pdowork.customer }}</div>
+                                                                        <div><b>Дата заключения договора:</b> {{ object.object.pdowork.agreement_date }}</div>
+                                                                        <div><b>Адрес объекта:</b> {{ object.object.pdowork.object_address }}</div>
                                                         </div>
                                                         <hr>
                                                         <div class="detail-footer">
-                                                            <a href="../starter-kit/">
+                                                            <a href="#">
                                                                 <button class="btn btn-square btn-outline-primary-2x">
-                                                                    Батафсил маълумот
+                                                                   Подробная информация
                                                                 </button>
                                                             </a>
                                                         </div>
@@ -160,7 +160,7 @@
                                         <div class="row">
 
                                             {% if aggreed_ones.count == 0 %}
-                                                 <p class="mb-0 m-t-30">Тасдикланган иш йўқ</p>
+                                                 <p class="mb-0 m-t-30">Нет утвержденной работы</p>
                                             {% endif %}
 
                                             {% for object in aggreed_ones %}
@@ -168,18 +168,18 @@
                                                 <div class="file-sidebar ribbon-vertical-right-wrapper">
                                                     <div class="pricing-plan shadow border-0">
                                                         <div class="ribbon ribbon-right ribbon-primary">ID : {{ object.object.id }}</div>
-                                                        <div class="blog-date"><span style="color: #168eea;font-size: 40px;">{{ object.object.pdowork.work_term }}</span> Kun</div>
+                                                        <div class="blog-date"><span style="color: #168eea;font-size: 40px;">{{ object.object.pdowork.work_term }}</span> день</div>
                                                         <h5>{{ object.object.pdowork.object_name}}</h5>
                                                         <div class="blog-bottom-content">
-                                                            <div><b>Келиб тушган вақти:</b> {{ object.object.pdowork.agreement_date}}</div>
-                                                            <div><b>Муддати</b> {{ object.object.pdowork.work_term}}</div>
-                                                            <div><b>Жойлашган жойи:</b> {{ object.object.pdowork.object_address}}</div>
+                                                            <div><b>Заказчик:</b> {{ object.object.pdowork.customer }}</div>
+                                                            <div><b>Дата заключения договора:</b> {{ object.object.pdowork.agreement_date }}</div>
+                                                            <div><b>Адрес объекта:</b> {{ object.object.pdowork.object_address }}</div>
                                                         </div>
                                                         <hr>
                                                         <div class="detail-footer">
                                                             <a href="{% url 'show_report' id=object.object.id %}">
                                                                 <button class="btn btn-square btn-outline-primary-2x float-end">
-                                                                    Батафсил маълумот
+                                                                   Подробная информация
                                                                 </button>
                                                             </a>
                                                         </div>
