--- a/topografiya/templates/history_work.html
+++ b/topografiya/templates/history_work.html
@@ -71,66 +71,66 @@
           <div class="modal-content">
               <div class="modal-header bg-primary">
                   <h5 class="modal-title" id="exampleModalLabel">
-                      Буюртма ҳақида маълумот</h5>
+                       Информация о заказе</h5>
                   <button class="btn-close text-white" type="button" data-bs-dismiss="modal" aria-label="Close"></button>
               </div>
              <div class="modal-body">
                   <div class="row">
                 <div class="col-lg-6">
                           <div class="mb-2">
-                              <b>Шартнома рақами<sup style="color: red;">*</sup></b>
+                              <b>Номер договора<sup style="color: red;">*</sup></b>
                               <p>{{ pdowork.pdowork.object_number }}</p>
                           </div>
                           <div class="mb-2">
-                              <b>Шартнома санаси</b>
+                              <b>Дата договора</b>
                               <p>{{ pdowork.pdowork.agreement_date }}</p>
                           </div>
                           <div class="mb-2">
-                              <b>Объект номи<sup style="color: red;">*</sup></b>
+                              <b>Наименование объекта<sup style="color: red;">*</sup></b>
                               <p>{{ pdowork.pdowork.object_name }} </p>
                           </div>
                           <div class="mb-2">
-                              <b>Буюрмачи</b>
+                              <b>Заказчик</b>
                               <p>{{ pdowork.pdowork.customer }}</p>
                           </div>
                           <div class="mb-2">
-                              <b>Объект манзили<sup style="color: red;">*</sup></b>
+                              <b>Адрес объекта<sup style="color: red;">*</sup></b>
                               <p>{{ pdowork.pdowork.object_address }}</p>
                           </div>
                       </div>
 
                       <div class="col-lg-6 text-end">
                           <div class="mb-2">
-                              <b>Бажариш муддати<sup style="color: red;">*</sup></b>
+                              <b>Сроки выполнения<sup style="color: red;">*</sup></b>
                               <p>{{ pdowork.pdowork.work_term }} kun</p>
                           </div>
                           <div class="mb-2">
-                              <b>Буюртмачи реквизитлари<sup style="color: red;">*</sup></b>
+                              <b>Реквизиты заказчика<sup style="color: red;">*</sup></b>
                               <p>{{ pdowork.pdowork.customer_info }}</p>
                           </div>
                           <div class="mb-2">
-                              <b>Иш тури<sup style="color: red;">*</sup></b>
+                              <b>Вид работы<sup style="color: red;">*</sup></b>
                               <p>{{ pdowork.pdowork.work_type }}</p>
                           </div>
                           <div class="mb-2">
-                              <b>Шартнома суммаси<sup style="color: red;">*</sup></b>
+                              <b>Сумма договора<sup style="color: red;">*</sup></b>
                               <p>{{ pdowork.pdowork.object_cost|intcomma }}</p>
                           </div>
                           <div class="mb-2">
-                              <b>Маъсул бажарувчи бўлим<sup style="color: red;">*</sup></b>
+                              <b>Отдел ответственный за исполнительнение<sup style="color: red;">*</sup></b>
                               <p>{{ pdowork.pdowork.department }}</p>
                           </div>
                       </div>
                   </div>
                    <div class="row">
                       <div class="col-md-12">
-                          <a href="/{{ pdowork.pdowork.latter }}" target="_blank"><h6 class=""> <i class="fa fa-file-word-o"></i> Буюрта хати билан танишиш</h6></a>
+                          <a href="/{{ pdowork.pdowork.latter }}" target="_blank"><h6 class=""> <i class="fa fa-file-word-o"></i> Ознакомление с письмом заказчика</h6></a>
                       </div>
                       <div class="col-md-12">
-                          <a href="/{{ pdowork.pdowork.tz }}" target="_blank"><h6 class=""> <i class="fa fa-file-word-o"></i> Техник топшириқ файли билан танишиш</h6></a>
+                          <a href="/{{ pdowork.pdowork.tz }}" target="_blank"><h6 class=""> <i class="fa fa-file-word-o"></i> Ознакомление с техническим заданием</h6></a>
                       </div>
                       <div class="col-md-12">
-                          <a href="/{{ pdowork.pdowork.smeta }}" target="_blank"><h6 class=""> <i class="fa fa-file-word-o"></i> Смета файли билан танишиш</h6></a>
+                          <a href="/{{ pdowork.pdowork.smeta }}" target="_blank"><h6 class=""> <i class="fa fa-file-word-o"></i> Ознакомление со сметой</h6></a>
                       </div>
 
                   </div>
@@ -144,7 +144,7 @@
                 <div class="page-header">
                     <div class="row">
                         <div class="col-sm-6">
-                            <h3>Иш холати</h3>
+                            <h3>Состояния работа</h3>
                             <ol class="breadcrumb">
                                 <li class="breadcrumb-item"><a href="{% url 'index' %}" ><i class="fa fa-home f-20"></i></a></li>
                                 <li class="breadcrumb-item"><a href="{% url 'status_work' id=work.id %}">{{ work.object_name }}</a></li>
@@ -155,7 +155,7 @@
                                 <div class="p-10 bg-primary f-w-600" type="button"
                                         data-bs-toggle="modal" data-bs-target="#exampleModal"><i
                                         class="icofont icofont-maximize"></i>
-                                    Буюртма ҳақида маълумот
+                                    Информация о заказе
                                 </div>
                             </div>
                         </div>
@@ -183,9 +183,9 @@
                                                     <thead class="table-primary">
                                                     <tr>
                                                         <th scope="col">#</th>
-                                                        <th scope="col">Обект номи</th>
-                                                        <th scope="col">Ким томонидан бажарилди</th>
-                                                        <th scope="col">Ўзгариш қилинган вақт</th>
+                                                        <th scope="col">Наименование объекта</th>
+                                                        <th scope="col">Кто выполнил</th>
+                                                        <th scope="col">Время, когда изменения были сделаны</th>
 {#                                                        <th class="table-danger" scope="col">Қайтарилганлар сони</th>#}
 {#                                                        <th class="table-warning" scope="col">Жўнатилган муддати</th>#}
 {#                                                        <th scope="col">Кўриш</th>#}
