--- a/topografiya/templates/oogd_printer/works.html
+++ b/topografiya/templates/oogd_printer/works.html
@@ -1,6 +1,6 @@
 {% extends 'master.html' %}
 {% load static %}
-{% block title %} Янги топшириқлар  {% endblock %}
+{% block title %} Новые задания  {% endblock %}
 {% block stylecontent %}
 
 
@@ -15,7 +15,7 @@
                 <div class="page-header">
                     <div class="row">
                         <div class="col-sm-12">
-                            <h3>Янги топшириқлар</h3>
+                            <h3>Новые задания</h3>
                         </div>
                     </div>
                 </div>
@@ -26,7 +26,7 @@
                      {% if not works %}
                         <div class="col-sm-12">
                              <div class="card text-center p-4 bg-images text-warning">
-                                 <h4>Yangi topshiriq yo'q</h4>
+                                 <h4>Нет нового задания</h4>
                             </div>
                         </div>
 
@@ -39,18 +39,18 @@
                                 <div class="ribbon ribbon-right ribbon-color_one"><i class="fa fa-check" title="Ishchi qabul qilmagan ish"></i></div>
                                 <div class="blog-box blog-grid">
                                     <div class="blog-details-second">
-                                        <div class="blog-post-date"><span class="blg-month">Кун</span><span
+                                        <div class="blog-post-date"><span class="blg-month">день</span><span
                                                 class="blg-date">{{ work.object.pdowork.work_term }}</span></div>
                                             <h6 class="blog-bottom-details">{{ work.object.pdowork.object_name }}</h6>
-                                        <div><b>Ташкилот номи:</b> {{ work.object.pdowork.customer_info }}</div>
-                                        <div><b>Келиб тушган вақти:</b> {{ work.object.pdowork.agreement_date }}</div>
-                                        <div><b>Жойлашган жойи:</b> {{ work.object.pdowork.object_address }}</div>
+                                        <div><b>Заказчик:</b> {{ object.object.pdowork.customer }}</div>
+                                        <div><b>Дата заключения договора:</b> {{ object.object.pdowork.agreement_date }}</div>
+                                        <div><b>Адрес объекта:</b> {{ object.object.pdowork.object_address }}</div>
                                         <div class="text-center p-2">
                                         </div>
                                         <div class="detail-footer">
                                             <a href="{% url 'open_to_print' id=work.object.id %}">
                                                 <button class="btn btn-square btn-primary w-100">
-                                                    Ишни кўриш
+                                                    Просмотр Работы
                                                 </button>
                                             </a>
                                         </div>
