--- a/topografiya/templates/regiter.html
+++ b/topografiya/templates/regiter.html
@@ -44,10 +44,10 @@
           <div class="col-12 p-0">
             <div class="login-card">
               <form class="theme-form login-form shadow-lg bg-light text-primary" style="width: 35%">
-                <h4>Рўйхатдан ўтиш</h4>
-                <h6>Рўйхатдан ўтиш учун шахсий маълумотларни киритинг</h6>
+                <h4 class="text-center">Регистрация</h4>
+                <h6 class="text-center">Для регистрации введите свои личные данные</h6>
                 <div class="form-group">
-                  <label>Фойдаланувчи</label>
+                  <label>Пользователь</label>
                   <div class="small-group">
                     <div class="input-group"><span class="input-group-text"><i class="icon-user"></i></span>
                       <input class="form-control" type="text" id="fio" name="fio" required="" placeholder="F.I.O">
@@ -55,7 +55,7 @@
                   </div>
                 </div>
                 <div class="form-group">
-                  <label>Телефон рақам</label>
+                  <label>ТНомер телефона</label>
                   <div class="small-group">
                     <div class="input-group"><span class="input-group-text"><i class="fa fa-mobile"></i></span>
                       <input class="form-control" type="number" id="contact" name="contact" required="" placeholder="99 999 99 99">
@@ -64,26 +64,26 @@
                 </div>
 
                 <div class="form-group">
-                  <label>Електрон почта манзили</label>
+                  <label>Адресс электронной почты</label>
                   <div class="input-group"><span class="input-group-text"><i class="icon-email"></i></span>
                     <input class="form-control" type="email" required="" id="email" name="email" placeholder="uzgashliti@gmail.com">
                   </div>
                 </div>
 
               <div class="form-group">
-                  <label>Лавозим</label>
+                  <label>Должность</label>
                   <div class="input-group"><span class="input-group-text"><i class="fa fa-user"></i></span>
-                    <input class="form-control" type="text" required="" id="position" name="position" placeholder="Лавозимингизни киритинг">
+                    <input class="form-control" type="text" required="" id="position" name="position" placeholder="Должность">
                   </div>
                 </div>
 
 
 
               <div class="form-group">
-                  <label>Бўлим</label>
+                  <label>Отдел</label>
                   <div class="input-group"><span class="input-group-text"><i class="fa fa-group"></i></span>
                      <select required class="form-control" id="department" name="department">
-                         <option value="">--- Бўлимни танланг ---</option>
+                         <option value="">--- Выбрать отдел ---</option>
                          {% for department in departments %}
                              <option value="{{ department.id }}"> {{ department.name }} </option>
                          {% endfor %}
@@ -95,7 +95,7 @@
                   <label>Филиал</label>
                   <div class="input-group"><span class="input-group-text"><i class="fa fa-chain-broken"></i></span>
                      <select required class="form-control" id="branch" name="branch">
-                         <option value="">--- Филиални танланг ---</option>
+                         <option value="">--- Выбрать филиал ---</option>
                          {% for branch in branches %}
                              <option value="{{ branch.id }}"> {{ branch.name }} </option>
                          {% endfor %}
@@ -115,7 +115,7 @@
                 </div>
 
                 <div class="form-group">
-                  <label>Паролни тасдиқлаш</label>
+                  <label>Подтвердить пароль</label>
                   <div class="input-group"><span class="input-group-text"><i class="icon-lock"></i></span>
                     <input class="form-control" type="password" name="re_password" id="re_password"  placeholder="*********">
                     <div class="show-hide"><span class="show"></span></div>
@@ -125,15 +125,15 @@
                 <div class="form-group">
                   <div class="checkbox">
                     <input id="checkbox1" type="checkbox">
-                    <label class="text-muted" for="checkbox1">Рози бўлинг <span>Махфийлик сиёсати</span></label>
+                    <label class="text-muted" for="checkbox1">Подтвердить согласие <span>Политика конфиденциальности</span></label>
                   </div>
                 </div>
 
                 <div class="form-group ">
-                  <button class="btn btn-primary w-100 btn-block" type="button" id="sign_up">Рўйхатдан ўтиш</button>
+                  <button class="btn btn-primary w-100 btn-block" type="button" id="sign_up">Регистрация</button>
                 </div>
 
-                <p>Рўйхатдан ўтганмисиз?<a class="ms-2" href="{% url 'login' %}">Тизимга кириш</a></p>
+                <p>Вы зарегистрированы?<a class="ms-2" href="{% url 'login' %}">Вход в систему</a></p>
               </form>
             </div>
           </div>
@@ -185,11 +185,11 @@
             });
             }
             else{
-                alert('Тасдиқлаш пароли нотоғри киритилди!');
+                alert('Bведен неправильный пароль!');
             }
         }
         else{
-            alert("Bo'lim tanlanmagan!");
+            alert("Не выбран отдел!");
         }
 
 
